reset to first section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="do-wrapper ">
         <div class="do-steps-container">
             <!-- Card Activation Step -->
-            <section class="do-step-container row " id="step-card-activation">
+            <section class="do-step-container row active in-progress" id="step-card-activation">
                 <div class="do-step-heading col-md-3">
                     <div class="do-step-status ">
                         <span class="done"></span>
@@ -208,7 +208,7 @@
                 </div>
             </section>
 
-            <section class="do-step-container row active in-progress" id="step-estate-sub">
+            <section class="do-step-container row " id="step-estate-sub">
                     <div class="do-step-heading col-md-3">
                     <div class="do-step-status">
                         <span class="done"></span>
