changes in bold font

--- a/index.html
+++ b/index.html
@@ -423,15 +423,15 @@
                         <div class="flex section-col-full payment-options-container">
                             <div class="flex flex-ac payment-options">
                                 <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
-                                <p class="boldest">Online SBI</p>
+                                <p class="bold">Online SBI</p>
                             </div>
                             <div class="flex flex-ac payment-options">
                                 <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
-                                <p class="boldest">NEFT</p>
+                                <p class="bold">NEFT</p>
                             </div>
                             <div class="flex flex-ac payment-options">
                                 <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
-                                <p class="boldest">Pay via UPI</p>
+                                <p class="bold">Pay via UPI</p>
                             </div>
                         </div>
                         <p><b>Important:</b> Not paying your minimum/total due card on time will impact your bureau score which may lead to rejection of loan/card application in future.</p>
