--- a/card_activated.html
+++ b/card_activated.html
@@ -41,7 +41,7 @@
     <main class="do-wrapper ">
         <div class="do-steps-container">
             <!-- Card Activation Step -->
-            <section class="do-step-container row active in-progress" id="step-card-activation">
+            <section class="do-step-container row active done" id="step-card-activation">
                 <div class="do-step-heading col-md-3">
                     <div class="do-step-status ">
                         <span class="done"></span>
