--- a/card_activated.html
+++ b/card_activated.html
@@ -100,13 +100,11 @@
                             <div class="section-col-5">
                                 <p>
                                     Your SBI Card is active. 
-                                    <br>
-                                    Service Request Number for card activation is <b>98765432</b>.
                                 </p>
                             </div>
                         </div>
                         <div class="do-button-group space-top vertical-sm" >
-                            <button class="do-button primary" disabled id="step1-activated-button">
+                            <button class="do-button primary" disabled >
                                 Activated
                             </button>
                             <a class="underlined" onClick="changeStep('2')" >
