--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="do-button-group space-top vertical-sm">
-                        <button class="do-button primary" disabled id="" onClick="activateCard()">
+                        <button class="do-button primary" disabled id="step1-activate-button" onClick="activateCard()">
                             Activate
                         </button>
                         <a class="underlined" onClick="changeStep('2')" >
