--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <!-- you can hide and show <span> with class 'step-sub-text' according to data received from backend -->
                             <!-- remove 'hide' classs which ever set you want to show -->
 
-                            <span class="step-sub-text set1 hide">E-mail ID Verified</span>
+                            <span class="step-sub-text set1 ">E-mail ID Verified</span>
                             <span class="step-sub-text  set2 grey hide  ">E-mail ID not verified</span>
                             <span class="step-sub-text set3 hide ">E-mail ID Verified</span>
                             <span class="step-sub-text grey set4 hide">E-mail ID not Verified</span>
