--- a/subscribed-email-not-verified.html
+++ b/subscribed-email-not-verified.html
@@ -298,7 +298,7 @@
                             <!-- remove 'hide' classs which ever set you want to show -->
 
                             <span class="step-sub-text set1 hide">E-mail ID Verified</span>
-                            <span class="step-sub-text  set2 grey hide  ">E-mail ID not verified</span>
+                            <span class="step-sub-text  set2 grey ">E-mail ID not verified</span>
                             <span class="step-sub-text set3 hide ">E-mail ID Verified</span>
                             <span class="step-sub-text grey set4 hide">E-mail ID not Verified</span>
                     </a>
