--- a/not-subscribed-email-not-verified.html
+++ b/not-subscribed-email-not-verified.html
@@ -300,7 +300,7 @@
                             <span class="step-sub-text set1 hide">E-mail ID Verified</span>
                             <span class="step-sub-text  set2 grey hide  ">E-mail ID not verified</span>
                             <span class="step-sub-text set3 hide ">E-mail ID Verified</span>
-                            <span class="step-sub-text grey set4 hide">E-mail ID not Verified</span>
+                            <span class="step-sub-text grey set4 ">E-mail ID not Verified</span>
                     </a>
                     <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
                         <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
