--- a/not-subscribed-email-verified.html
+++ b/not-subscribed-email-verified.html
@@ -299,7 +299,7 @@
 
                             <span class="step-sub-text set1 hide">E-mail ID Verified</span>
                             <span class="step-sub-text  set2 grey hide  ">E-mail ID not verified</span>
-                            <span class="step-sub-text set3 hide ">E-mail ID Verified</span>
+                            <span class="step-sub-text set3  ">E-mail ID Verified</span>
                             <span class="step-sub-text grey set4 hide">E-mail ID not Verified</span>
                     </a>
                     <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
