--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="do-steps-container">
                 <div class="col-md-8 offset-4 do-step-counter">Step <span id="counter-number">1</span> of 5</div>
                 <!-- Card Activation Step -->
-                <section class="do-step-container row done" id="step-card-activation">
+                <section class="do-step-container row active in-progress" id="step-card-activation">
                     <div class="do-step-heading col-md-3">
                         <div class="do-step-status ">
                             <span class="done"></span>
@@ -196,7 +196,7 @@
                                 </div>
                         </div>
                 </section>
-                <section class="do-step-container row done " id="step-generate-pin">
+                <section class="do-step-container row  " id="step-generate-pin">
                         <div class="do-step-heading col-md-3">
                         <div class="do-step-status">
                             <span class="done"></span>
@@ -309,7 +309,7 @@
                     </div>
                 </section>
     
-                <section class="do-step-container row done  " id="step-estate-sub">
+                <section class="do-step-container row   " id="step-estate-sub">
                         <div class="do-step-heading col-md-3">
                         <div class="do-step-status">
                             <span class="done"></span>
@@ -787,7 +787,7 @@
                     </div>
                 </section>
     
-                <section class="do-step-container row active in-progress" id="step-international-usage">
+                <section class="do-step-container row " id="step-international-usage">
                         <div class="do-step-heading col-md-3">
                         <div class="do-step-status">
                             <span class="done"></span>
