--- a/offers.html
+++ b/offers.html
@@ -24,11 +24,11 @@
                         <div class="col-md-12 text-center">
                             <h4 class="do-heading">Offers on your SBI Card Elite</h4>
                             <p class="do-text gray">We have special handpicked offers for you. Avail these exciting offers and  earn reward points.</p>
-                            <img src="./assets/images/offers.png" style="width: 400px;margin: 40px 0px;" alt="">
+                            <img src="./assets/images/offers.png" style="width: 100%;margin: 40px 0px;max-width: 400px" alt="">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-2  offers-box">
+                        <div class="col-md-5 col-lg-2  offers-box">
                             <h4 class="do-subheading noMargin">Add-on Card</h4>
                             <span class="do-gold-text">
                                     <img src="./assets/icons/star.svg" alt=""> Avail 100 Reward Points
@@ -36,7 +36,7 @@
                             <p class="do-text">
                                     1.2% p.m. for 6 months. Processing fee of 1.5% or Rs. 199 (whichever is higher)
                             </p>
-                            <div class="do-button-group space-top vertical" >
+                            <div class="do-button-group space-top vertical-lg vertical-sm" >
                                     <button class="do-button primary"   >
                                             Apply Now
                                     </button>
@@ -45,14 +45,14 @@
                                     </a>
                                 </div>
                         </div>
-                        <div class="col-md-2 offset-1 offers-box">
+                        <div class="col-md-5 col-lg-2 offset-lg-1 offset-1 offers-box">
                             <h4 class="do-subheading noMargin">BT</h4>
                             <span class="do-gold-text">
                                     <img src="./assets/icons/star.svg" alt=""> Avail 100 Reward Points
                                 </span> 
                             <p class="do-text">
                                     1.2% p.m. for 6 months. Processing fee of 1.5% or Rs. 199 (whichever is higher)                            </p>
-                            <div class="do-button-group space-top vertical" >
+                            <div class="do-button-group space-top vertical-lg vertical-sm" >
                                     <button class="do-button primary"   >
                                             Apply Now
                                     </button>
@@ -61,14 +61,14 @@
                                     </a>
                                 </div>
                         </div>
-                        <div class="col-md-2 offset-1 offers-box">
+                        <div class="col-md-5 col-lg-2 offset-lg-1 offset-0 offers-box">
                             <h4 class="do-subheading noMargin">Bill Payment</h4>
                             <span class="do-gold-text">
                                     <img src="./assets/icons/star.svg" alt=""> Avail 100 Reward Points
                                 </span> 
                             <p class="do-text">
                                     2.45% p.m. for 45 days. Processing fee of 1.5% or Rs. 199(whichever is higher)                            </p>
-                            <div class="do-button-group space-top vertical" >
+                            <div class="do-button-group space-top vertical-lg vertical-sm" >
                                     <button class="do-button primary"   >
                                             Pay Now
                                     </button>
@@ -77,7 +77,7 @@
                                     </a>
                                 </div>
                         </div>
-                        <div class="col-md-2 offset-1 offers-box">
+                        <div class="col-md-5 col-lg-2 offset-lg-1 offset-1 offers-box">
                             <h4 class="do-subheading noMargin">Flexipay</h4>
                             <span class="do-gold-text">
                                     <img src="./assets/icons/star.svg" alt=""> Avail 100 Reward Points
@@ -85,7 +85,7 @@
                             <p class="do-text">
                                     Eligible for Rs. 10000 at an interest rate of 14% for 36 months.
                             </p>
-                            <div class="do-button-group space-top vertical" >
+                            <div class="do-button-group space-top vertical-lg vertical-sm" >
                                     <button class="do-button primary"   >
                                             Book Now
                                     </button>
