--- a/card-activated.html
+++ b/card-activated.html
@@ -1121,7 +1121,7 @@
     <script  type="text/javascript" src="./build/bundle.js"></script>
     <script>
         (function(){
-            // window.location.hash = "#welcome"
+            window.location.hash = "#welcome"
         }())
     </script>
   </body>
