--- a/index.html
+++ b/index.html
@@ -894,23 +894,23 @@
                                 </p>
                             <div class="flex">
                                         <div class="do-card-container section-col-full">
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">First Year Fee</h5>
                                                 <p class="data">₹ 600</p>
                                             </div>
-                                            <div class="do-card small sm-full"  >
+                                            <div class="do-card small "  >
                                                 <h5 class="heading">Annual Fee</h5>
                                                 <p class="data">₹ 600</p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">Credit Limit</h5>
                                                 <p class="data">₹ 10,00,000</p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">Billing Cycle</h5>
                                                 <p class="data">12 <span class="sub-text">of every month </span></p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">SBR Amount</h5>
                                                 <p class="data">₹ 1,00,000</p>
                                             </div>
@@ -971,7 +971,7 @@
             <div id="welcome" class="modal " role="dialog" >
                     <div class="modal-body text-center noPadding">
                         <div class="modal-padding-wrapper">
-                            <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
+                            <img src="./assets/images/welcome.png" style="max-width:100%;width: 274px;" alt="">
                             <h2 class="modal-heading">Hi Vikramaditya! <br> Welcome to SBI Card</h2>
                             <p  class="modal-content">With SBI Card, you enjoy the freedom to manage your Credit Card.
                                 <br>
@@ -1035,7 +1035,7 @@
                         <p  class="modal-content ">
                                 You can come back any time to complete the onboarding by clicking ‘Digital Onboarding’ from your dashboard.
                         </p>
-                        <div class="flex flex-ac flex-jc flex-col">
+                        <div class="do-button-group space-top vertical-sm">
                             <button class="do-button primary button-modal-space" onClick="window.location.hash = ''" >I’ll do it later</button>
                             <a href="#" class="underlined">I want to continue</a>
                         </div>
