--- a/subscribed-email-not-verified.html
+++ b/subscribed-email-not-verified.html
@@ -894,23 +894,23 @@
                                 </p>
                             <div class="flex">
                                         <div class="do-card-container section-col-full">
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">First Year Fee</h5>
                                                 <p class="data">₹ 600</p>
                                             </div>
-                                            <div class="do-card small sm-full"  >
+                                            <div class="do-card small "  >
                                                 <h5 class="heading">Annual Fee</h5>
                                                 <p class="data">₹ 600</p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">Credit Limit</h5>
                                                 <p class="data">₹ 10,00,000</p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">Billing Cycle</h5>
                                                 <p class="data">12 <span class="sub-text">of every month </span></p>
                                             </div>
-                                            <div class="do-card small sm-full">
+                                            <div class="do-card small ">
                                                 <h5 class="heading">SBR Amount</h5>
                                                 <p class="data">₹ 1,00,000</p>
                                             </div>
