--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row flex-ac flex relative" id="reward-header-container" >
                     <img  src="./assets/images/header_image_1x.png" alt="" />
                     <h2 class="do-reward-header-text col-md-4 offset-4">Let’s get you onboarded!</h2>
-                    <!-- <div class=" col-md-3 offset-1 reward-points">
+                    <!-- <div class=" col-md-4 col-lg-3 offset-1 reward-points">
                         <span class="reward-points-subtext">You have</span>
                         <div class="do-reward-card">
                             <span class="reward-star"><img src="./assets/icons/star.svg" alt=""></span>
@@ -44,7 +44,7 @@
                 <div class="col-md-8 offset-4 do-step-counter">Step <span id="counter-number">1</span> of 5</div>
                 <!-- Card Activation Step -->
                 <section class="do-step-container row active in-progress" id="step-card-activation">
-                    <div class="do-step-heading col-md-3">
+                    <div class="do-step-heading col-md-4 col-lg-3">
                         <div class="do-step-status ">
                             <span class="done"></span>
                             <span class="active"></span>
@@ -197,7 +197,7 @@
                         </div>
                 </section>
                 <section class="do-step-container row  " id="step-generate-pin">
-                        <div class="do-step-heading col-md-3">
+                        <div class="do-step-heading col-md-4 col-lg-3">
                         <div class="do-step-status">
                             <span class="done"></span>
                             <span class="active"></span>
@@ -314,7 +314,7 @@
                 </section>
     
                 <section class="do-step-container row   " id="step-estate-sub">
-                        <div class="do-step-heading col-md-3">
+                        <div class="do-step-heading col-md-4 col-lg-3">
                         <div class="do-step-status">
                             <span class="done"></span>
                             <span class="active"></span>
@@ -792,7 +792,7 @@
                 </section>
     
                 <section class="do-step-container row " id="step-international-usage">
-                        <div class="do-step-heading col-md-3">
+                        <div class="do-step-heading col-md-4 col-lg-3">
                         <div class="do-step-status">
                             <span class="done"></span>
                             <span class="active"></span>
@@ -885,7 +885,7 @@
                         </div>
                 </section>
                 <section class="do-step-container row " id="step-do-confirmation">
-                        <div class="do-step-heading col-md-3">
+                        <div class="do-step-heading col-md-4 col-lg-3">
                         <div class="do-step-status">
                             <span class="done"></span>
                             <span class="active"></span>
